# TERL2

./: README.md  utilisation_git.md
FacialRecognition/: label.py
SpeechRecognition/: README.md  make_label.py
SpeechRecognition/Documentation/docSphinx/: Makefile  make.bat
SpeechRecognition/Documentation/docSphinx/source/: conf.py  index.rst  s.rst
SpeechRecognition/v1.0/: checkpoint  speech_data3.py  test.py  tflearn.lstm.model.data-00000-of-00001  tflearn.lstm.model.index  train0.py
SpeechRecognition/v1.2/: checkpoint  lstm.index  speech_data.py  test.py  train2.py
SpeechRecognition/v1.3/: checkpoint  speech_data.py  test.py  tflearn.lstm.model.index  train3.py
SpeechRecognition/v1.4/: checkpoint  speech_data3.py  test.py  tflearn.lstm.model.data-00000-of-00001  tflearn.lstm.model.index  train4.py
SpeechRecognition/v1.5/: checkpoint  speech_data3.py  train4.py
Voiture/: Dockerfile  README.md  build.sh  world.data
Voiture/doc/: diagram.dia
Voiture/src/: Application.cpp  Application.hpp  NeuralNetwork.cpp  NeuralNetwork.hpp  Plot.cpp  Plot.hpp  Renderer.cpp  Renderer.hpp  Simulator.cpp  Simulator.hpp  StackTrace.cpp  StackTrace.hpp  World.cpp  World.hpp  build_cmd.sh  meson.build  test.cpp  testNN.cpp  utils.hpp
Voiture/src/ImGui/: meson.build
doc/: Ressources en ligne .docx
